# convergeai-ai-agent-job

./: .gitignore  README.md  pyproject.toml  soup.txt
poc/: crawler_api.py  crawler_async.py  database.py  webapp.py
poc/data/: lego.txt  lego_output.md
poc/job_crawler/: crawler.py
poc/model/: chat.py  embedding.py
poc/prompts/: job_ad_extract.jinja  job_metadata.jinja
